# Bullseyegolf-frontend-light

./: .gitignore  .tokeignore  Dockerfile  README.md  docker.conf  docker.nix  test.conf  todo.md
server/document-root/: submit_score.html  user.css
server/document-root/mockups/: select_hole.html  select_tournament.html  submit_score.html  view_hole.html
user/: Cargo.toml  default.nix  shell.nix
user/src/: error.rs  get.rs  main.rs  post.rs
