[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html = "0.6.1"
reqwest = { version = "0.11.20", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_urlencoded = "0.7.1"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
