[package]
name = "bullseyegolf-frontend-light-user"
version = "1.0.0"
edition = "2021"
authors = ["Ava Drumm"]
description = "Digital scoreboard for golf contest 'nearest pin'. Server rendered minimalist web version."
documentation = "https://github.com/itzgoldenleonard/bullseyeGolf-frontend-light"
repository = "https://github.com/itzgoldenleonard/bullseyegolf-frontend-light"
homepage = "https://bullseyegolf.org"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html = "0.6.1"
reqwest = { version = "0.11.20", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_urlencoded = "0.7.1"
tuple = "0.5.1"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
